# ssd-syncer

./: .gitignore  README.md
cli/: Cargo.toml
cli/src/: config.rs  diff.rs  ignore.rs  main.rs  scanner.rs  snapshot.rs  sync_engine.rs
release/: README.md  install.bat  install.sh  ssd-syncer-macos  sync.bat
